# EchelonShield

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md  __main__.py  docs.md  run.sh
components/: __init__.py  base.py  clamav_component.py  crowdsec_component.py  fail2ban_component.py  falco_component.py  kubearmor_component.py  loki_component.py  lynis_component.py  osquery_component.py  registry.py  rkhunter_component.py  safety_component.py  suricata_component.py  tetragon_component.py  trivy_component.py  ufw_component.py  wazuh_component.py
core/: __init__.py  engine.py
gui/: __init__.py  main_window.py  theme.py
gui/pages/: __init__.py  component_page.py
gui/widgets/: __init__.py  frost_widgets.py
